Oitavo commit: Segundo Termino

--- a/MarcacoesOnlineApi/MarcacoesOnlineApi.csproj
+++ b/MarcacoesOnlineApi/MarcacoesOnlineApi.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\fotografias\" />
+    <Folder Include="wwwroot\uploads\photos\" />
   </ItemGroup>
 
 </Project>
