--- a/MarcacoesOnlineApi/appsettings.json
+++ b/MarcacoesOnlineApi/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=GATE\\SQLGATE;Database=MarcacoesDb;User Id=sa;Password=2077;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=GATE\\SQLGATE;Database=MarcacoesDb;User Id=sa;Password=2077;TrustServerCertificate=True;Connect Timeout=30;MultipleActiveResultSets=True;"
     },
     "Logging": {
         "LogLevel": {
